# NiacinMath

./: .gitignore  CMakeLists.txt  README.md
Number/: CMakeLists.txt  Num.cpp  Num.h  NumR.h  NumZ.cpp  NumZ.h  Number.h
include/: CMakeLists.txt
include/number/: CMakeLists.txt  Num.h  NumC.h  NumN.h  NumQ.h  NumZ.h
src/number/: CMakeLists.txt  Num.cpp  NumC.cpp  NumR.cpp  NumZ.cpp
