SET (LIBNUMZ_SRC Num.cpp;NumR.cpp;NumZ.cpp)

#dynamic library
ADD_LIBRARY (Number SHARED ${LIBNUMZ_SRC})
#static library
#ADD_LIBRARY (NumZ STATIC ${LIBNUMZ_SRC})

#SET_TARGET_PROPERTIES (NumZ PROPERTIES VERSION 1.0 SOVERSION 1)

INSTALL (TARGETS Number LIBRARY DESTINATION Number ARCHIVE DESTINATION Number)
INSTALL (FILES Number.h DESTINATION include/Number)
